[package]
name = "do-capture"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.20"
url = "2.1.1"
fantoccini = "0.13.1"
tokio = { version = "0.2.21", features = ["process"], default_features = false }
futures = "0.3.5"
which = "4.0.1"

[workspace]
members = [
	"capture"
]

