[package]
name = "capture"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
tokio = { version = "0.2.21", features = ["macros", "io-std"] }
do-capture = { path = ".." }
url = "2.1.1"
